--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus magnam consequatur, totam error officia labore officiis iste modi nam hic.git init</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus magnam consequatur, totam error officia labore officiis iste modi nam hic.git initg</h1>
+    <h2>Lorem ipsum dolor sit amet.</h2>
 </body>
 </html>
